Created the Facility model based on the Service model from previous version. All tests run, started work on Cucumber tests

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-log/*.log
-tmp/**/*
 .DS_Store
 config/database.yml
 coverage/*
 db/backup/*
 db/*.sqlite3
 doc/*
+log/*.log
 public/stylesheets/*.css
+tmp/*
+tmp/**/*
