--- a/config/database_example.yml
+++ b/config/database_example.yml
@@ -1,24 +1,23 @@
-# SQLite version 3.x
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: mysql
+  database: opening_development
+  username: root
+  password:
+  socket: /var/run/mysqld/mysqld.sock
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
+# Warning: The database defined as 'test' will be erased and
+# re-generated from your development database when you run 'rake'.
 # Do not set this db to the same as development or production.
-test: &TEST
-  adapter: sqlite3
-  database: db/test.sqlite3
-  pool: 5
-  timeout: 5000
+test:
+  adapter: mysql
+  database: opening_test
+  username: root
+  password:
+  socket: /var/run/mysqld/mysqld.sock
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
-
-cucumber:
-  <<: *TEST
+  adapter: mysql
+  database: opening_production
+  username: root
+  password:
+  socket: /var/run/mysqld/mysqld.sock
